# xmlschema

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  bug.py  mypy.ini  publiccode.yml  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/workflows/: test-xmlschema.yml
doc/: Makefile  api.rst  components.rst  components_api.rst  conf.py  converters.rst  exceptions.rst  extras.rst  features.rst  index.rst  intro.rst  notes.rst  package_api.rst  requirements.txt  testing.rst  usage.rst
profiling/: profile_context.py  profile_context_manager.py  profile_decoder.py  profile_decoder2.py  profile_etree.py  profile_groups.py  profile_params.py  profile_resources.py
scripts/: make_translation.py
sdc4/: IMPLEMENTATION_SUMMARY.md  sdc4-meta.owl  sdc4.owl  sdc4.xsd
sdc4/example/: dm-jsi5yxnvzsmsisgn2bvelkni.xml  dm-jsi5yxnvzsmsisgn2bvelkni.xsd
sdcvalidator/: __init__.py  _limits.py  aliases.py  arguments.py  cli.py  dataobjects.py  documents.py  exports.py  limits.py  loaders.py  locations.py  names.py  namespaces.py  settings.py  translation.py
sdcvalidator/converters/: __init__.py  abdera.py  badgerfish.py  base.py  columnar.py  gdata.py  jsonml.py  parker.py  unordered.py
sdcvalidator/core/: assertions.py  attributes.py  builders.py  builtins.py  complex_types.py  elements.py  exceptions.py  facets.py  groups.py  helpers.py  identities.py  models.py  notations.py  particles.py  schemas.py  simple_types.py  validation.py  wildcards.py  xsd_globals.py  xsdbase.py
sdcvalidator/extras/: codegen.py  wsdl.py
sdcvalidator/locale/: xmlschema.pot
sdcvalidator/resources/: fetchers.py  parsers.py  sax.py  xml_loader.py  xml_resource.py
sdcvalidator/sdc4/: README.md  __init__.py  constants.py  error_mapper.py  examples.py  instance_modifier.py  validator.py
sdcvalidator/testing/: _builders.py  _factory.py  _helpers.py  _observers.py  _test_case_classes.py
sdcvalidator/utils/: decoding.py  descriptors.py  etree.py  logger.py  misc.py  paths.py  protocols.py  qnames.py  urls.py
sdcvalidator/xpath/: __init__.py  assertion_parser.py  mixin.py  proxy.py  selectors.py
tests/: __init__.py  _test_common.py  check_etree_import.py  check_memory.py  run_all_tests.py  run_memory_tests.py  run_typing_tests.py  run_w3c_tests.py  test_all.py  test_cli.py  test_codegen.py  test_converters.py  test_dataobjects.py  test_documents.py  test_etree.py  test_etree_import.py  test_exports.py  test_files.py  test_helpers.py  test_loaders.py  test_locations.py  test_memory.py  test_models.py  test_namespaces.py  test_package.py  test_qnames.py  test_random.py  test_regex.py  test_resources.py  test_schemas.py  test_translations.py  test_typing.py  test_utils.py  test_validation.py  test_validators.py  test_w3c_suite.py  test_wsdl.py  test_xml_testfiles.py  test_xpath.py  test_xsd_testfiles.py
tests/examples/: cars.xsd  recursive-groups.xsd  vehicles-3_errors.xml  vehicles.xml
tests/sdc4/: __init__.py  test_error_mapper.py  test_sdc4_integration.py
tests/test_cases/: testfiles
tests/test_factory/: factory.py  schema_tests.py  validation_tests.py
tests/validation/: test_decoding.py  test_encoding.py  test_validation.py
tests/validators/: test_assertions.py  test_attributes.py  test_builtins.py  test_complex_types.py  test_elements.py  test_exceptions.py  test_facets.py  test_global_maps.py  test_groups.py  test_identities.py  test_meta.py  test_models.py  test_notations.py  test_particles.py  test_schema_class.py  test_schemas.py  test_simple_types.py  test_wildcards.py  test_xsd_globals.py  test_xsdbase.py
xmlschema/: __init__.py  _limits.py  aliases.py  arguments.py  builtins.py  cli.py  codepoints.py  compat.py  components.py  converters.py  core.py  dataobjects.py  documents.py  etree.py  exceptions.py  exports.py  facets.py  factories.py  fields.py  helpers.py  limits.py  loaders.py  locations.py  names.py  namespaces.py  options.py  parse.py  qnames.py  regex.py  resources.py  schema.py  settings.py  structures.py  translation.py  typing.py  unicode_categories.json  utils.py  validation.py  validator.py  validators.py  (+4 more)
xmlschema/components/: __init__.py  attributes.py  builtins.py  complex_types.py  component.py  constraints.py  datatypes.py  elements.py  facets.py  groups.py  notations.py  simple_types.py  wildcards.py  xsdbase.py
xmlschema/converters/: __init__.py  abdera.py  badgerfish.py  base.py  columnar.py  dataelement.py  default.py  element_data.py  gdata.py  jsonml.py  parker.py  unordered.py
xmlschema/extras/: codegen.py  wsdl.py
xmlschema/locale/: __init__.py  make_translation.py  xmlschema.pot
xmlschema/resources/: __init__.py  _arguments.py  _defuse.py  _descriptors.py  _fetchers.py  _helpers.py  _loader.py  _parse.py  _parser.py  _resource.py  _typing.py  _url_openers.py  _utils.py  arguments.py  base.py  exceptions.py  fetchers.py  filters.py  loader.py  loaders.py  parsers.py  sax.py  settings.py  typing.py  utils.py  xml_loader.py  xml_resource.py
xmlschema/schemas/: XMLSchema-hasFacetAndProperty_minimal.xsd  XMLSchema-instance_minimal.xsd  xml_minimal.xsd
xmlschema/sdc4/: README.md  __init__.py  error_mapper.py  examples.py  validator.py
xmlschema/testing/: __init__.py  _builders.py  _case_class.py  _factory.py  _helpers.py  _observers.py  _test_case_classes.py  builders.py  case_class.py  factory.py  helpers.py  observers.py  schema_tests.py  test_case.py  validation_tests.py
xmlschema/tests/: __init__.py  _test_common.py  check_decode_memory.py  check_etree_import.py  check_etree_memory.py  check_memory.py  schema_observers.py  test.xml  test.xsd  test_all.py  test_all.sh  test_decoder.py  test_decoding.py  test_encoding.py  test_etree.py  test_factory.py  test_files.py  test_helpers.py  test_memory.py  test_meta.py  test_models.py  test_package.py  test_regex.py  test_resources.py  test_schemas.py  test_url.py  test_validation.py  test_validators.py  test_w3c_suite.py  test_w3c_xsdtests.py  test_xpath.py
xmlschema/utils/: arguments.py  (+11 more)
(+485 files in other folders)
